# RS

./: README.md  celery_app.py  docker-compose.yml  index.html  pyproject.toml
api/app/: config.py  db.py
api/app/models/: episode.py  title.py
api/app/schemas/: episode.py  schedule.py
api/app/services/: availability.py  scheduler.py
api/tests/: test_scheduler.py
app/models/: right.py
app/routers/: schedule.py  titles.py
app/schemas/: title.py
app/utils/: demo_schedule.py
rights-scheduling-app/: Makefile
rights-scheduling-app/api/: Dockerfile
rights-scheduling-app/api/app/: main.py
rights-scheduling-app/api/app/models/: channel.py  contract.py  schedule.py
rights-scheduling-app/api/app/routers/: episodes.py  rights.py
rights-scheduling-app/api/app/schemas/: common.py  right.py
rights-scheduling-app/api/app/utils/: seed.py
rights-scheduling-app/api/tests/: test_availability.py
rights-scheduling-app/web/: package.json
rights-scheduling-app/web/src/: main.tsx
web/: Dockerfile
