[project]
name = "rights-scheduling-api"
version = "0.1.0"
description = "Broadcast Rights & Scheduling API"
authors = [{name="You"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dateutil>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pytest>=8.2",
    "httpx>=0.27",
    "pytest-asyncio>=0.23"
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.setuptools]
packages = ["app"]
